Fix and Features
Fixed some bug about the equal "button",  added the highest number that the user can digit and added the conversion in exponential number when the result is too high

--- a/Calculator/style.css
+++ b/Calculator/style.css
@@ -6,7 +6,7 @@ table{
 
 td {
     background-color: #d6d6d6;
-    width: 60px;
+    width: 80px;
 }
 
 #display{
